--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         }
     ],
     "require": {
-        "php": ">=5.5.0"
+        "php": ">=5.5.0",
+        "devco/model": "1.0.x-dev"
     },
     "autoload": {
         "psr-0": {
